[gd_scene load_steps=7 format=3 uid="uid://cqwnwya1uvuhq"]

[ext_resource type="Script" uid="uid://dgsdj1qjtsxk2" path="res://Script/GameManager.gd" id="1_aan6j"]
[ext_resource type="Script" uid="uid://2n013chcks8v" path="res://Script/grid.gd" id="2_h3nmf"]
[ext_resource type="PackedScene" uid="uid://c5yhl1qy20s1a" path="res://Scene/player.tscn" id="3_hueuk"]
[ext_resource type="Script" uid="uid://cv0dqfrxn6eav" path="res://Script/Player.gd" id="4_6a8me"]
[ext_resource type="PackedScene" uid="uid://8a4phx04jhos" path="res://Scene/enemy.tscn" id="5_yg4ot"]
[ext_resource type="Script" uid="uid://dmesfw2ykrfp5" path="res://Script/Enemy.gd" id="6_vm4ek"]

[node name="Main" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_aan6j")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("2_h3nmf")

[node name="Player" parent="." instance=ExtResource("3_hueuk")]
position = Vector2(34, 32)
script = ExtResource("4_6a8me")

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy1" parent="Enemies" instance=ExtResource("5_yg4ot")]
position = Vector2(225, 160)
script = ExtResource("6_vm4ek")

[node name="Enemy2" parent="Enemies" instance=ExtResource("5_yg4ot")]
position = Vector2(97, 162)
script = ExtResource("6_vm4ek")

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8

[node name="PlayerStats" type="VBoxContainer" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = -1
offset_right = 40.0
offset_bottom = 50.0

[node name="HPLabel" type="Label" parent="UI/GameUI/PlayerStats"]
layout_mode = 2

[node name="TurnLabel" type="Label" parent="UI/GameUI/PlayerStats"]
layout_mode = 2

[node name="BattleUI" type="VBoxContainer" parent="UI/GameUI"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 0
offset_left = 10.0
offset_top = 711.0
offset_right = 310.0
offset_bottom = 920.0

[node name="BattleLog" type="RichTextLabel" parent="UI/GameUI/BattleUI"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2

[node name="AttackButton" type="Button" parent="UI/GameUI/BattleUI"]
layout_mode = 2
text = "atteck"

[node name="DefendButton" type="Button" parent="UI/GameUI/BattleUI"]
layout_mode = 2
text = "defend
"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(701, 396)

[connection signal="pressed" from="UI/GameUI/BattleUI/AttackButton" to="GameManager" method="_on_attack_button_pressed"]
[connection signal="pressed" from="UI/GameUI/BattleUI/DefendButton" to="GameManager" method="_on_defend_button_pressed"]
